# text_adventure

./: CONTRIBUTING.md  Cargo.toml  Question 1  README.md  doc.md  dump.json  dump.yml  tree.json
.github/workflows/: rust.yml
data/: critters.json  critters.yml  player.yml  world.json  world.yml
src/: command.rs  main.rs  world.rs
