[package]
name = "text_adventure"
version = "0.2.4"
authors = ["10maurycy10 <10maurycy10@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license  = "GPL-3.0+"
keywords = ["game", "text", "engine", "adventure"]
categories = ["game-engines", "games"]
description = "a program to allow for the creation of simple text adventure games using JSON files"
homepage = "https://github.com/10maurycy10/text_adventure"
repository = "https://github.com/10maurycy10/text_adventure.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive", "rc"] }
serde_json = "1.0.57"
serde_yaml = "0.8"
clap = "2.33.3"
rand = "0.7.3"
termcolor = "1.1"